# DeepFix-Agent

./: .gitignore  LICENSE  README-zh.md  README.md  main.py  pyproject.toml
py_document_tests/: target.py  target_2.py
scripts/: run_single.py
src/graph/: builder.py  nodes.py  router.py  state.py
src/models/: deepseek_gateway.py
src/schemas/: patch.py
src/tools/: file_ops.py  shell_ops.py
src/utils/: logger.py
