[project]
name = "agent-test-26-07-18"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
url = "http://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
